# h-queries

./: .gitignore  Queries.hs  h-queries.cabal  test.db  test.hs  test2.hs
HQueries/: Internal.hs  Queries.hs  SqlUtils.hs  Sqlite.hs  TH.hs
