name:                h-queries
version:             0.1.0.0
synopsis:            A Haskell based query generator
license:             LGPL-3
license-file:        LICENSE.txt
author:              Premium Minds
maintainer:          rui.barreiro@gmail.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     HQueries.Queries, HQueries.TH, HQueries.Internal, HQueries.Sqlite, HQueries.SqlUtils
  
  other-extensions:    FlexibleInstances
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
                     , TemplateHaskell
                     , GADTs
                     , RankNTypes
                     , OverloadedStrings
  
  build-depends:       base >=4.6
                     , text >=0.11
                     , template-haskell >=2.8
                     , bytestring >=0.10
                     , mtl >=2.1
                     , HDBC-sqlite3 >=2.3
                     , HDBC >=2.3
                     , containers
                     , lens
                     , MissingH
                     , syb
  
  default-language:    Haskell2010
